# Global-Localization-with-LiDAR

dataset_player/: play_kitti_for_mapping.cpp  play_kitti_for_relocate.cpp
include/: for_cloud.hpp  for_desc.hpp  for_io.hpp  for_time.hpp
launch/: collect_database.launch  mapping.launch  play_kitti_for_mapping.launch  play_kitti_for_relocate.launch  relocate.launch
offline_mapping/: CMakeLists.txt  collect_database.cpp  mapping.cpp
offline_mapping/linefit/: CMakeLists.txt  bin.cpp  bin.h  ground_segmentation.cpp  ground_segmentation.h  segment.cpp  segment.h
online_relocate/: load_map.cpp  relocate.cpp
